# projeto-pokemon-elite-4-new-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ESTRUTURA_CODIGO.md  GUIA_GITHUB.md  INSTALACAO.md  INSTALACAO_PYTHON.md  MELHORIAS_IMPLEMENTADAS.md  Makefile  README.md  README_GITHUB.md  README_PYTHON.md  case_tecnico_texto.txt  comparacao_perguntas.md  config.yaml  funcoes_pokemon.R  main.R  main.py  pokemon_processado.csv  pyproject.toml  requirements.txt  test_advanced_optimization.py  test_setup.R
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: requirements.txt
data/: .gitignore  elite_four_data.csv  pokemon_data.csv  pokemon_moves.csv  pokemon_moves_simple.csv  pokemon_movesets.csv  pokemon_processed.csv  pokemon_with_predictions.csv
data/processed/: README.md
data/raw/: README.md
docs/: ANALISE_RESULTADOS.md  APRESENTACAO_COMPLETA.ipynb  CASE_TECNICO_41_PERGUNTAS_PYTHON.ipynb  DECISOES_CIENTIFICAS.md  ESTRUTURA_PROJETO.md  IMPLEMENTACAO_TECNICA.md  INSTRUCOES_ENTREGA.md  METODOLOGIA_CIENTIFICA.md  README.md  REFERENCIAS_CIENTIFICAS.md  dados_trat.csv  dados_trat_sem_indice.csv  documentacao_tecnica.md  generate_all_41_questions.py  generate_case_tecnico.py  generate_full_case_tecnico.py  subset_numericas.csv
docs/apresentacao/: APRESENTACAO_EXECUTIVA.md
docs/case-tecnico/: CASE_TECNICO_41_PERGUNTAS.R  CASE_TECNICO_41_PERGUNTAS.Rmd  INSTRUCOES_NOTEBOOK.md
docs/case_tecnico/: PERGUNTAS_RESPOSTAS_CASE.md  RESPOSTA_41_PERGUNTAS_CASE.md  RESPOSTA_CASE_TECNICO.md
docs/estrutura/: INDICE_ESTRUTURA.md  RESUMO_ORGANIZACAO.md
docs/execucao/: INSTRUCOES_EXECUCAO.md
docs/notebooks/: INSTRUCOES_NOTEBOOK.md
docs/projeto/: INDICE_DOCUMENTOS.md  README_ATUALIZADO.md
docs/relatorios/: RESUMO_EXECUTIVO_CASE.md  RESUMO_PROJETO.md
output/analysis/: battle_analysis_individual_performance.csv  battle_analysis_team_performance.csv
output/models/: all_models.rds  best_model.rds  optimization_result.rds
output/optimization/: best_team.txt  team_performance.txt
output/reports/: relatorio_execucao.md  relatorio_final.md
output/tables/: battle_summary.csv  best_counters.csv  best_team.csv  elite_four_analysis.csv  level_recommendations.csv  member_difficulty.csv  model_comparison.csv  pokemon_performance.csv  stats_summary.txt  team_stats.csv  top_attack.csv  top_defense.csv  top_hp.csv  top_speed.csv  type_analysis.csv
pokemon_elite_four/: __init__.py
pokemon_elite_four/analysis/: __init__.py  advanced_team_optimizer.py  battle_analyzer.py  data_processor.py  team_optimizer.py
pokemon_elite_four/core/: __init__.py  battle_system.py  elite_four.py  moves.py  pokemon.py  smart_battle_system.py
pokemon_elite_four/utils/: __init__.py  config.py  logger.py  visualization.py
src/analysis/: 02_exploratory_analysis.R
src/core/: 01_data_preparation.R  05_battle_simulation.R  config.R  exemplo_execucao.R  main_analysis.R  setup.R
src/models/: 03_statistical_modeling.R  04_team_optimization.R
src/utils/: functions.R  install_packages.R  meu_pipeline.R  test_structure.R
tests/: __init__.py  test_battle_system.py  test_data_processor.py  test_integration.py  test_pokemon.py
